improve response in admin api
